<?xml version="1.0"?>
<package format="2">
  <name>wall_follow</name>
  <version>0.0.1</version>
  <description>The wall_follow package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shamsudeensodangi@gmail.com">sas2</maintainer>

  <license> Boost Software License</license>


  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
	
	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>std_msgs</exec_depend>
	
	<build_depend>sensor_msgs</build_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
